townify/http/http-manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http
  namespace: http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: townify-app
  template:
    metadata:
      labels:
        app: townify-app
    spec:
      containers:
        - name: townify-http-image
          image: mohammedayad10/townify-http:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "500m"
            limits:
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: http-service
  namespace: http
spec:
  selector:
    app: townify-app
  ports:
    - name: http-service
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
