townify/http/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: http
spec:
  ingressClassName: nginx
  rules:
    - host: townify-http.ayadweb.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-service
                port:
                  number: 8080
